operator/pkg/gateway-api/testdata/gateway/udproute-simple-same-namespace/output/udproute-gateway-conformance-infra-udp-test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: UDPRoute
metadata:
  name: gateway-conformance-infra-udp-test
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-udproute
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: udp-backend
          port: 5353
status:
  parents:
    - conditions:
        - message: Accepted UDPRoute
          reason: Accepted
          status: "True"
          type: Accepted
          lastTransitionTime: "2026-02-25T00:00:00Z"
        - message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
          lastTransitionTime: "2026-02-25T00:00:00Z"
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: gateway-udproute
        namespace: gateway-conformance-infra
